# CompileString

./: CMakeLists.txt  README.md
include/CompileString/: CompileString.hpp
tests/: CMakeLists.txt  test.cpp  test_ElementAccess.cpp  test_Iterators.cpp  test_Operations.cpp  test_Operators.cpp  test_Search.cpp  test_toString.cpp
